--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "~1.3.3",
     "angular-ui-router": "~0.2.13",
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "angular-devise": "~1.0.0"
   }
 }
