--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 development:
   adapter: mysql2
   encoding: utf8
-  database: student
+  database: angular
   pool: 5
   username: root
   password: root
